--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
       "minor_version": 1
   },
   "display_information": {
-      "name": "Bolt Template App"
+      "name": "IT Support"
   },
   "features": {
       "app_home": {
@@ -13,7 +13,7 @@
           "messages_tab_read_only_enabled": true
       },
       "bot_user": {
-          "display_name": "Bolt Template App",
+          "display_name": "IT Support",
           "always_online": false
       },
       "shortcuts": [
@@ -26,8 +26,8 @@
       ],
       "slash_commands": [
           {
-              "command": "/sample-command",
-              "description": "Runs a sample command",
+              "command": "/it-support",
+              "description": "Ask IT any question!",
               "should_escape": false
           }
       ]
