added it-summary, fixed it support

--- a/manifest.json
+++ b/manifest.json
@@ -30,6 +30,13 @@
               "description": "Ask IT any question!",
               "should_escape": false
           }
+      ],
+      "slash_commands": [
+          {
+              "command": "/it-summary",
+              "description": "Summary of AI slackbot performance!",
+              "should_escape": false
+          }
       ]
   },
   "oauth_config": {
